[gd_scene load_steps=2 format=3 uid="uid://cx8p4q2n5rwxy"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_pause")

[node name="PausePanel" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PauseLabel" type="Label" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Restart Level"

[node name="QuitButton" type="Button" parent="PausePanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Quit Game"
